[gd_scene load_steps=9 format=3 uid="uid://b5csifcrytegw"]

[ext_resource type="Script" path="res://scripts/ui/pause_menu/pause_menu.gd" id="1_78msb"]
[ext_resource type="Shader" path="res://resources/shaders/blur.gdshader" id="2_bgr1x"]
[ext_resource type="PackedScene" uid="uid://xmhpn38awq6d" path="res://scenes/ui/menu_button.tscn" id="2_ig7np"]
[ext_resource type="PackedScene" uid="uid://d5l2m2e8q2x4" path="res://scenes/ui/settings/settings_ui.tscn" id="4_mtpwx"]

[sub_resource type="Animation" id="Animation_bcgww"]
resource_name = "close"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("background_blur:material:shader_parameter/blur_radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [15.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ua2a6"]
resource_name = "open"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("background_blur:material:shader_parameter/blur_radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 15.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0uhvd"]
_data = {
"close": SubResource("Animation_bcgww"),
"open": SubResource("Animation_ua2a6")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1hb26"]
shader = ExtResource("2_bgr1x")
shader_parameter/blur_radius = 15.0

[node name="pause_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_78msb")

[node name="animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0uhvd")
}

[node name="background_blur" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_1hb26")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="margin_container" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="menu_buttons" type="VBoxContainer" parent="margin_container"]
layout_mode = 2
alignment = 1

[node name="resume_button" parent="margin_container/menu_buttons" instance=ExtResource("2_ig7np")]
layout_mode = 2
text = "Resume"

[node name="settings_button" parent="margin_container/menu_buttons" instance=ExtResource("2_ig7np")]
layout_mode = 2
text = "Settings"

[node name="quit_button" parent="margin_container/menu_buttons" instance=ExtResource("2_ig7np")]
layout_mode = 2
text = "Quit"

[node name="quit_warning" type="VBoxContainer" parent="margin_container"]
visible = false
layout_mode = 2
theme_override_constants/separation = 64

[node name="quit_warning" type="RichTextLabel" parent="margin_container/quit_warning"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[center]Are you sure you want to quit?[/center]"

[node name="center_container" type="CenterContainer" parent="margin_container/quit_warning"]
layout_mode = 2
size_flags_horizontal = 3

[node name="quit_buttons" type="HBoxContainer" parent="margin_container/quit_warning/center_container"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="quit_confirm" parent="margin_container/quit_warning/center_container/quit_buttons" instance=ExtResource("2_ig7np")]
layout_mode = 2
text = "Yes"

[node name="quit_cancel" parent="margin_container/quit_warning/center_container/quit_buttons" instance=ExtResource("2_ig7np")]
layout_mode = 2
text = "No"

[node name="settings_ui" parent="." instance=ExtResource("4_mtpwx")]
visible = false
layout_mode = 1

[connection signal="animation_finished" from="animator" to="." method="_on_animator_animation_finished"]
[connection signal="pressed" from="margin_container/menu_buttons/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="margin_container/menu_buttons/settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="margin_container/menu_buttons/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="margin_container/quit_warning/center_container/quit_buttons/quit_confirm" to="." method="_on_quit_confirm_pressed"]
[connection signal="pressed" from="margin_container/quit_warning/center_container/quit_buttons/quit_cancel" to="." method="_on_quit_cancel_pressed"]
[connection signal="hidden" from="settings_ui" to="." method="_on_settings_ui_hidden"]
